--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_green_lock"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_green_round"
+        android:icon="${launcherIcon}"
+        android:roundIcon="${launcherIconRound}"
         android:supportsRtl="true"
         android:theme="@style/Theme.PineappleLockScreen">
         <activity
             android:name=".MainActivity"
+            android:label="@string/app_launcher_name"
             android:exported="true"
             android:theme="@style/Theme.PineappleLockScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,7 +38,7 @@
             android:icon="@drawable/ic_baseline_lock_24"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
             android:exported="true"
-            android:enabled="false">
+            android:enabled="@bool/supportQuickSettingsTile">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
