--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation "androidx.glance:glance-appwidget:1.0.0-alpha03"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     def nav_compose_version = '2.4.1'
     implementation "androidx.navigation:navigation-compose:$nav_compose_version"
