--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "net.blumia.pineapple.lockscreen"
         minSdk 28
         targetSdk 31
-        versionCode 2
-        versionName "1.0.0"
+        versionCode 3
+        versionName "1.1.0"
 
         manifestPlaceholders = [
             launcherIcon: "@mipmap/ic_launcher_green_lock",
@@ -30,8 +30,10 @@ android {
             dimension = "mode"
 
             resValue "bool", "supportQuickSettingsTile", "false"
+            resValue "bool", "supportAppWidget", "false"
             buildConfigField "boolean", "PROMINENT_DISCLOSURE_REQUIRED", "true"
-            buildConfigField "boolean", "USE_DEPRECATED_SHORTCUT_METHOD", "false"
+            buildConfigField "boolean", "USE_DEPRECATED_SHORTCUT_METHOD", "true"
+            buildConfigField "boolean", "PROMOTE_PLUS_VERSION", "true"
             buildConfigField "String", "STORE_LINK", "\"https://play.google.com/store/apps/details?id=%s\""
         }
         create("plus") {
@@ -44,8 +46,10 @@ android {
                 launcherIconRound: "@mipmap/ic_launcher_blue_round"
             ]
             resValue "bool", "supportQuickSettingsTile", "true"
+            resValue "bool", "supportAppWidget", "true"
             buildConfigField "boolean", "PROMINENT_DISCLOSURE_REQUIRED", "true"
             buildConfigField "boolean", "USE_DEPRECATED_SHORTCUT_METHOD", "true"
+            buildConfigField "boolean", "PROMOTE_PLUS_VERSION", "false"
             buildConfigField "String", "STORE_LINK", "\"https://play.google.com/store/apps/details?id=%s\""
         }
         create("oss") {
@@ -54,8 +58,10 @@ android {
             versionNameSuffix = "-oss"
 
             resValue "bool", "supportQuickSettingsTile", "true"
+            resValue "bool", "supportAppWidget", "true"
             buildConfigField "boolean", "PROMINENT_DISCLOSURE_REQUIRED", "false"
             buildConfigField "boolean", "USE_DEPRECATED_SHORTCUT_METHOD", "false"
+            buildConfigField "boolean", "PROMOTE_PLUS_VERSION", "true"
             // Change this to other FOSS store link when we have one.
             buildConfigField "String", "STORE_LINK", "\"https://play.google.com/store/apps/details?id=%s\""
         }
