--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'net.blumia.pineapple.lockscreen'
 }
 
 dependencies {
