--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,7 +97,7 @@ android {
 dependencies {
     // Import the Compose BOM
     // BOM to library version mapping: https://developer.android.com/jetpack/compose/setup#bom-version-mapping
-    implementation platform('androidx.compose:compose-bom:2022.11.00')
+    implementation platform('androidx.compose:compose-bom:2022.12.00')
     // Declare dependencies for the desired Compose libraries without versions
     implementation 'androidx.compose.foundation:foundation'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
@@ -112,6 +112,9 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     def nav_compose_version = '2.5.3'
     implementation "androidx.navigation:navigation-compose:$nav_compose_version"
+    def latestAppCompatVersion = "1.6.0-rc01"
+    implementation "androidx.appcompat:appcompat:$latestAppCompatVersion"
+    implementation "androidx.appcompat:appcompat-resources:$latestAppCompatVersion"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
