--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -97,7 +97,7 @@ android {
 dependencies {
     // Import the Compose BOM
     // BOM to library version mapping: https://developer.android.com/jetpack/compose/setup#bom-version-mapping
-    implementation platform('androidx.compose:compose-bom:2022.12.00')
+    implementation platform('androidx.compose:compose-bom:2023.01.00')
     // Declare dependencies for the desired Compose libraries without versions
     implementation 'androidx.compose.foundation:foundation'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
