--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,8 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.3.2"
+        // Compose compiler and kotlin version table: https://developer.android.com/jetpack/androidx/releases/compose-kotlin
+        kotlinCompilerExtensionVersion "1.4.5"
     }
     packagingOptions {
         resources {
@@ -96,8 +97,8 @@ android {
 
 dependencies {
     // Import the Compose BOM
-    // BOM to library version mapping: https://developer.android.com/jetpack/compose/setup#bom-version-mapping
-    implementation platform('androidx.compose:compose-bom:2023.01.00')
+    // BOM to library version mapping: https://developer.android.com/jetpack/compose/bom/bom-mapping
+    implementation platform('androidx.compose:compose-bom:2023.04.00')
     // Declare dependencies for the desired Compose libraries without versions
     implementation 'androidx.compose.foundation:foundation'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
@@ -106,8 +107,8 @@ dependencies {
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.material:material"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.0'
     implementation "androidx.glance:glance-appwidget:1.0.0-alpha05"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     def nav_compose_version = '2.5.3'
