--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-    id 'com.android.application' version '7.4.0' apply false
-    id 'com.android.library' version '7.4.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.android.application' version '8.0.0' apply false
+    id 'com.android.library' version '8.0.0' apply false
+    // Compose compiler and kotlin version table: https://developer.android.com/jetpack/androidx/releases/compose-kotlin
+    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
 }
 
 task clean(type: Delete) {
