--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "net.blumia.pineapple.lockscreen"
@@ -98,12 +98,12 @@ android {
 dependencies {
     // Import the Compose BOM
     // BOM to library version mapping: https://developer.android.com/jetpack/compose/bom/bom-mapping
-    implementation platform('androidx.compose:compose-bom:2023.04.00')
+    implementation platform('androidx.compose:compose-bom:2023.08.00')
     // Declare dependencies for the desired Compose libraries without versions
     implementation 'androidx.compose.foundation:foundation'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.material:material"
     implementation "androidx.compose.ui:ui-tooling-preview"
@@ -113,12 +113,12 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     def nav_compose_version = '2.5.3'
     implementation "androidx.navigation:navigation-compose:$nav_compose_version"
-    def latestAppCompatVersion = "1.6.0-rc01"
+    def latestAppCompatVersion = "1.6.1"
     implementation "androidx.appcompat:appcompat:$latestAppCompatVersion"
     implementation "androidx.appcompat:appcompat-resources:$latestAppCompatVersion"
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.5.0" // https://stackoverflow.com/a/75948151/5785726 why?
     debugImplementation "androidx.compose.ui:ui-tooling"
 }
