--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <application
         android:allowBackup="true"
+        android:launchMode="singleTask"
         android:label="@string/app_name"
         android:icon="${launcherIcon}"
         android:roundIcon="${launcherIconRound}"
@@ -20,6 +21,13 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="pineapple-lock-screen" />
+            </intent-filter>
+            <meta-data android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
         <service android:name="net.blumia.pineapple.accessibility.A11yService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
