--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,10 +98,11 @@ android {
 dependencies {
     // Import the Compose BOM
     // BOM to library version mapping: https://developer.android.com/jetpack/compose/bom/bom-mapping
-    implementation platform('androidx.compose:compose-bom:2024.02.02')
+    def composeBOM = platform('androidx.compose:compose-bom:2024.06.00')
+    implementation composeBOM
+    androidTestImplementation composeBOM
     // Declare dependencies for the desired Compose libraries without versions
     implementation 'androidx.compose.foundation:foundation'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation "androidx.compose.ui:ui"
