--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "net.blumia.pineapple.lockscreen"
         minSdk 28
         targetSdk 34
-        versionCode 11
-        versionName "1.3.1"
+        versionCode 12
+        versionName "1.3.2"
 
         manifestPlaceholders = [
             launcherIcon: "@mipmap/ic_launcher_green_lock",
@@ -82,6 +82,7 @@ android {
     }
     buildFeatures {
         compose true
+        buildConfig true
     }
     composeOptions {
         // Compose compiler and kotlin version table: https://developer.android.com/jetpack/androidx/releases/compose-kotlin
@@ -104,22 +105,22 @@ dependencies {
     // Declare dependencies for the desired Compose libraries without versions
     implementation 'androidx.compose.foundation:foundation'
 
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.material:material"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation "androidx.glance:glance-appwidget:1.0.0"
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-    def nav_compose_version = '2.7.3'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.3'
+    implementation 'androidx.activity:activity-compose:1.9.0'
+    implementation "androidx.glance:glance-appwidget:1.1.0"
+    implementation "androidx.datastore:datastore-preferences:1.1.1"
+    def nav_compose_version = '2.7.7'
     implementation "androidx.navigation:navigation-compose:$nav_compose_version"
-    def latestAppCompatVersion = "1.6.1"
+    def latestAppCompatVersion = "1.7.0"
     implementation "androidx.appcompat:appcompat:$latestAppCompatVersion"
     implementation "androidx.appcompat:appcompat-resources:$latestAppCompatVersion"
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4"
     debugImplementation "androidx.compose.ui:ui-tooling"
 }
