Add option to allow exclude from Recents screen
and such option should only work when using app icon as lock screen
action.

Resolve: https://github.com/BLumia/pineapple-lock-screen/issues/10

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
         }
     }
 
-    flavorDimensions "mode"
+    flavorDimensions = ["mode"]
     productFlavors {
         create("free") {
             dimension = "mode"
