--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,7 +99,7 @@ android {
 dependencies {
     // Import the Compose BOM
     // BOM to library version mapping: https://developer.android.com/jetpack/compose/bom/bom-mapping
-    def composeBOM = platform('androidx.compose:compose-bom:2024.09.00')
+    def composeBOM = platform('androidx.compose:compose-bom:2024.09.02')
     implementation composeBOM
     androidTestImplementation composeBOM
     // Declare dependencies for the desired Compose libraries without versions
@@ -107,7 +107,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation "androidx.compose.ui:ui"
-    implementation "androidx.compose.material:material"
+    implementation "androidx.compose.material3:material3"
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.5'
     implementation 'androidx.activity:activity-compose:1.9.2'
