--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 }
 
 android {
-    compileSdk 35
+    compileSdk = 36
 
     defaultConfig {
         applicationId "net.blumia.pineapple.lockscreen"
         minSdk 28
-        targetSdk 35
-        versionCode 16
-        versionName "2.1.0"
+        targetSdk 36
+        versionCode 17
+        versionName "2.1.1"
 
         manifestPlaceholders = [
             launcherIcon: "@mipmap/ic_launcher_green_lock",
@@ -99,7 +99,7 @@ android {
 dependencies {
     // Import the Compose BOM
     // BOM to library version mapping: https://developer.android.com/jetpack/compose/bom/bom-mapping
-    def composeBOM = platform('androidx.compose:compose-bom:2025.05.01')
+    def composeBOM = platform('androidx.compose:compose-bom:2025.07.00')
     implementation composeBOM
     androidTestImplementation composeBOM
     // Declare dependencies for the desired Compose libraries without versions
@@ -109,10 +109,10 @@ dependencies {
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.material3:material3"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.2'
     implementation 'androidx.activity:activity-compose:1.10.1'
     implementation "androidx.glance:glance-appwidget:1.1.1"
-    implementation "androidx.datastore:datastore-preferences:1.1.6"
+    implementation "androidx.datastore:datastore-preferences:1.1.7"
     def nav_compose_version = '2.9.0'
     implementation "androidx.navigation:navigation-compose:$nav_compose_version"
     def latestAppCompatVersion = "1.7.0"
@@ -120,7 +120,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat-resources:$latestAppCompatVersion"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4"
     debugImplementation "androidx.compose.ui:ui-tooling"
 }
